<resources>
    <string name="app_name">Calculator App</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>

    <string name="decimal">.</string>
    <string name="all_clear">AC</string>
    <string name="clear">C</string>

    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
    <string name="square">x²</string>
    <string name="sqrt">√</string>

</resources>